# wadflow

./: .gitignore  README.md  pyproject.toml
tests/: reader_writer_test.py
wadflow/core/: __init__.py  reader.py  writer.py
