[tool.poetry]
name = "wadflow"
version = "0.1.0"
description = "A Python package to read WAD files."
authors = ["Deviant Syndrome <youremail@example.com>"]
license = "0BSD"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

